--- a/css/links-widget.css
+++ b/css/links-widget.css
@@ -17,6 +17,6 @@
     width: 10px;
     height: 10px;
     background: url(../image/home/widget-lamp-on.png) no-repeat 50% 50%;
-    bottom: 0;
+    bottom: 5px;
     left: 0;
 }
