--- a/css/main-content.css
+++ b/css/main-content.css
@@ -1,4 +1,4 @@
-.map__shadow {
+.main-content__shadow {
     height: 35px;
     width: 100%;
     background: url(../image/contact/map-shadow.png) no-repeat 50% 50%;
@@ -6,16 +6,13 @@
     z-index: 15;
     pointer-events: none;
 }
-.map__feedback{
+.main-content__feedback{
     position: relative;
     padding-bottom: 110px;
 }
-.map__background {
+.main-content__map {
     width: 100%;
     height: 100%;
     position: absolute;
     top: 0px;
-}
-.map {
-    height: 200%;
 }
